# wagtail-zoom-integration

./: MANIFEST.in  README.md  boot_django.py  makemigrations.py  migrate.py  setup.cfg
.github/workflows/: publish.yml
sandbox/: requirements.txt
sandbox/home/: models.py
sandbox/home/migrations/: 0003_eventregistrationpage.py  0004_formfield.py
sandbox/home/templates/integration/: form_thank_you_landing.html
sandbox/sandbox/settings/: base.py  dev.py
wagtailzoom/: api.py  apps.py  errors.py  forms.py  models.py  views.py  wagtail_hooks.py  widgets.py
wagtailzoom/migrations/: 0001_initial.py  0002_remove_zoomsettings_api_key_and_more.py
wagtailzoom/templates/wagtailzoom/: zoom_integration_form.html
wagtailzoom/templates/wagtailzoom/widgets/: zoom_event_select_widget.html  zoom_event_select_widget_js.html
